# air_quality

./: .gitignore  README.md  air_quality_exploration.qmd  main.py  pyproject.toml  testing.py
.continue/rules/: concise_answers.yaml
conf/: logging.yml  parameters.py
conf/base/: catalog.yml  parameters_pipe_guided_exploration.yml
notebooks/: air_quality_exploration.html  air_quality_exploration.qmd
src/: __init__.py  nodes.py  pipeline.py
src/air_quality/: __init__.py  __main__.py
src/air_quality/pipelines/pipe_guided_exploration/: __init__.py  nodes.py  pipeline.py
tests/pipelines/pipe_guided_exploration/: test_pipeline.py
