[project]
name = "air-quality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair>=6.0.0",
    "dask>=2026.1.2",
    "dask-geopandas>=0.5.0",
    "folium>=0.20.0",
    "ipykernel>=7.2.0",
    "missingno>=0.5.2",
    "pandas>=3.0.0",
    "pip>=26.0.1",
]

[dependency-groups]
dev = [
    "ty>=0.0.17",
]
